2010-09-17  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggPlayer.cs: Tidied up whitespace

	* OggPlaylist.cs: Removed unused event handler

2010-09-17  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggPlayer.cs: Added some protection against
	  NullReferenceExceptions when trying to get
	  FractionPlayed/FractionBuffered when the player has no file.

	* OggPlaylist.cs: Massively simplified the playlist system

	* OggPlayerVBN.cs: Bugfix: Solved NullReferenceException
	  during player shutdown

2010-07-30  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggFile.cs: Added error handling for in case of odd return
	  from csVorbisFile.time_seek

	* OggPlayerVBN.cs: Halved default max buffer size to possibly
	  fix hardware overruns on some systems
	Changed to QueuedBuffers<=2 in playback thread to try and fix
	  some weirdness with OpenAL not consuming the last couple of
	  buffers
	Changed the delay on an underrun in the player thread to the
	  PrebufferDelay to make it more sensible

2010-07-02  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggPlayerVBN.cs: Bugifx: Rearranged EOF message order to be
	  more sane for end users

2010-06-29  El Dragon  <thedragon@the-dragons-nest.co.uk>

	* OggPlayerFBN.cs: Moved UpdateDelay to the base OggPlayer
	  class & updated logic to prevent 0-delay sleep calls

	* OggPlayer.cs: Added UpdateDelay to base OggPlayer class

	* OggPlayerVBN.cs: Added UpdateDelay support to VBN player
	Updated PrebufferDelay property logic to ensure that
	  PrebufferDelay is at least 2*UpdateDelay
	Bugfix: Modified Player thread to fix bug due to attempting to
	  unqueue buffer references after queues had already been
	  destroyed during Playback_Stop
	Bugfix: Reset LastTick value in Playback_Seek to prevent loss
	  of tick events when seeking backwards
	Bugfix: Updated the Playback_Unpause function to use the
	  PrebufferDelay rather than an arbitrary 50ms figure (fixes
	  some issues with buffer inconsistency)
